--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl module WebService::LastFM::SimilarArtists
 
+0.02 Sun Jan 16 2011
+    - set default min_match to 0.75
+
 0.01 Fri Feb  3 2006
     - original version; created by ExtUtils::ModuleMaker 0.44
 
